<resources>
    <string name="app_name">LyceesGT</string>
    <!-- Languages -->
    <string name="ESP">Espagnol</string>
    <string name="ITA">Italien</string>
    <string name="ALL">Allemand</string>
    <string name="POR">Portugais</string>
    <string name="CHI">Chinois</string>
    <string name="RUS">Russe</string>
    <string name="SUD">Suédois</string>
    <string name="ARA">Arabe</string>
    <string name="JAP">Japonais</string>
    <!-- Specialities -->
    <string name="HIS">Histoire-géographie, géopolitique et sciences politiques</string>
    <string name="LIT">Littérature, langues et cultures de l\'antiquité</string>
    <string name="HUM">Humanités, littérature et philosophie</string>
    <string name="LAN">Langues, littératures et cultures étrangères et régionales</string>
    <string name="MAT">Mathématiques</string>
    <string name="NUM">Numérique et sciences informatiques</string>
    <string name="PHY">Physique-Chimie</string>
    <string name="SVT">Sciences de la Vie et de la Terre</string>
    <string name="SI">Sciences de l\'ingénieur</string>
    <string name="SES">Sciences économiques et sociales</string>
    <string name="THE">Théâtre</string>
    <string name="HDA">Histoire des arts</string>
    <string name="CIN">Cinéma audiovisuel</string>
    <string name="ART">Arts plastiques</string>

    <!-- Technologies -->
    <string name="STMG">STMG (management et gestion)</string>
    <string name="STI2D">STI2D (industrie et développement durable)</string>
    <string name="STD2A">STD2A (design et arts appliqués)</string>
    <string name="STL">STL (laboratoire)</string>
    <string name="ST2S">ST2S (santé et social)</string>
    <string name="STHR">STHR (hôtellerie et restauration)</string>

    <!-- Double cursus -->
    <string name ="ESABAC">ESABAC (italien)</string>
    <string name ="BACHIBAC">BACHIBAC (espagnol)</string>
    <string name ="ABIBAC">ABIBAC (allemand)</string>

    <string name ="BIITA">Section binationale italien</string>
    <string name ="BIALL">Section binationale allemand</string>
    <string name ="BIESP">Section binationale espagnol</string>

    <string name ="EUROESP">Section européenne espagnol</string>
    <string name ="EUROANG">Section européenne anglais</string>
    <string name ="EUROALL">Section européenne allemand</string>
    <string name ="EUROPOR">Section européenne portugais</string>

    <string name ="INTANG">Section internationale anglais</string>


</resources>
